# Magi-Coders

./: CalendrierPlantation.c  CalendrierPlantation.h  MohamedBourguiba.c  cap  capteurs.c  capteurs.h  fonctionsClients.c  fonctionsClients.h  inesfonction.c  inesfonction.h  inesmain.c  main.c  mainCapteur.c  mainClients.c  troupeau.c  troupeau.h
AUTHEN/: Makefile  Makefile.am  Makefile.in  authen.glade.bak  authen.gladep.bak  config.h  config.status  configure  configure.in
finalwork/: Makefile  absenteisme.txt  capteurs.txt  clients.txt  config.status  equip.txt  equip1.txt  smartfarm.glade  troupeau.txt  users.txt  utilisateurs.txt
finalwork/src/: Makefile  Makefile.am  Makefile.in  absenteisme.txt  auth.c  auth.h  callbacks.c  callbacks.h  capteurs.c  capteurs.txt  defectueux.txt  equip.txt  equip1.txt  fonction.c  fonction.h  functions.c  functions.h  interface.c  interface.c.bak  interface.h.bak  main.c  smartfarm  tree.c  tree.h  tree1.c  tree2.c  troupeau.h  troupeau_recherche.txt  users.txt
finalwork/src/.deps/: auth.Po  callbacks.Po  client.Po  tree.Po  tree1.Po  tree2.Po  troupeau.Po
gestionTroupeau/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  gestiontroupeau.glade.bak  gestiontroupeau.gladep  troupeau.txt
gestionTroupeau/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gestiontroupeau  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  tree.c  tree.h  troupeau.c  troupeau.h
gestionTroupeau/src/.deps/: main.Po  tree.Po
maquettesProjet/: Makefile  Makefile.am  Makefile.in  (+6 more)
(+80 files in other folders)
